--- a/clinical-expertise.html
+++ b/clinical-expertise.html
@@ -26,6 +26,7 @@
 <body>
   <!-- Nav bar -->
     <!-- Nav bar -->
+    <div class="pb-5 mb-5">
   <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
@@ -82,7 +83,7 @@
   </div>
 </nav>
 </div>
-</div>
+
 
 <!-- Service Banner -->
 
