--- a/clinical.html
+++ b/clinical.html
@@ -25,31 +25,31 @@
 </head>
 <body>
   <!-- Nav bar -->
-    <!-- Nav bar -->
-  <nav class="navbar navbar-expand-lg bg-light fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
-      <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+    <div class="pb-5 mb-5"> 
+      <nav class="navbar navbar-expand-lg bg-light fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
+          <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
 
-          <li class="nav-item dropdown">
-           <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" > 
-            <!-- <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
-              Services 
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="clinical.html">Clinical Service</a></li>
-              <li><a class="dropdown-item" href="bioanalytical.html">Bioanalytical Services</a></li>
-              <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
-            </ul>
-          </li>
+              <li class="nav-item dropdown">
+               <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" > 
+                <!-- <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
+                  Services 
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="clinical.html">Clinical Service</a></li>
+                  <li><a class="dropdown-item" href="bioanalytical.html">Bioanalytical Services</a></li>
+                  <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
+                </ul>
+              </li>
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="scientificHub.html" id="navbarDropdown">Scientific Hub</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -62,7 +62,7 @@
           <a class="nav-link" href="PMRInews.html">PMRI News</a>
         </li>
 
-         <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="aboutus.html">About Us</a>
         </li>
 
@@ -82,47 +82,42 @@
   </div>
 </nav>
 </div>
-</div>
+
 
 <!-- Service Banner -->
 
-<div class="page-header-service">
-  <div class="overlay">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>Clinical Services </h1>
-          <p>Science is our foundation and we never compromise on quality.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
+<div class="row">
+  <div class="container">
+</div>
+   <img src="img/Service/clinicalbanner.png" class = "img-fluid" alt="Banner" style="width: 100%;">
+</div>
+ 
 <div class="container">
-  <h1 class="text-center pt-3 "> Available Clinical Services</h1>
-  <p class="pt-3">You can always count on PMRI when you need us. Our GCP-compliant custom built clinical unit, with over 115,000 square foot of space, provides sufficient capacity to meet all of your needs, even during the COVID period. Boasting 360 beds in 6 self-contained state-of-the art units Our flexible scheduling process also provides you with dosing dates right within your target range and accommodate delays and last minute requests. This is a key success factor that allows you to minimize the impact of unavoidable delays during the drug development process</p>
-
+<strong><h1 class="text-center pt-3 "> Available Clinical Services</h1></strong>
+<hr class="border-5">
+<p class="pt-3">You can always count on PMRI when you need us. Our GCP-compliant custom built clinical unit, with over 115,000 square foot of space, provides sufficient capacity to meet all of your needs, even during the COVID period. Boasting 360 beds in 6 self-contained state-of-the art units Our flexible scheduling process also provides you with dosing dates right within your target range and accommodate delays and last minute requests. This is a key success factor that allows you to minimize the impact of unavoidable delays during the drug development process</p>
 </div>
 
-<!-- Expertise --> 
+
+<!-- Expertise -->
 
 <div class="container">
   <!--Grid row-->
   <div class="row text-center mx-auto">
     <!--Grid column-->
-    <div class="col-md-4 mb-4">
-      <img class="img-fluid my-5" alt="100x100" src="img/Service/Expertise.png" data-holder-rendered="true">
+    <div class="col-md-4">
+      <img class="img-fluid my-5" alt="100x100" src="img/Service/Expertise.png">
     </div>
     <!--Grid column-->
     <!--Grid column-->
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Expertise</h2>
       <div class="service pt-3"> 
-        <p>Expertise New Chemical Entities (NCEs) / New Therapeutic Entities (NTEs), hybrid submissions (505b2 and Value Added Medicine) and generic submissions for global jurisdictions. We have experience with various dosage forms in single dose and multiple dose drug administration regimens. (MAYBE THIS PARAGRAPH CAN GO SOMEWHERE ELSE).
-        </p>
+        <p> <!-- <iframe src="file.html"frameborder="0" height="100%" width="100%"></iframe> -->
+          Expertise New Chemical Entities (NCEs) / New Therapeutic Entities (NTEs), hybrid submissions (505b2 and Value Added Medicine) and generic submissions for global jurisdictions. We have experience with various dosage forms in single dose and multiple dose drug administration regimens. (MAYBE THIS PARAGRAPH CAN GO SOMEWHERE ELSE).</p>
       </div>
-      <div class="text-start pt-5"><a href="clinical-expertise.html" class="btn btn-success" >Learn More</a> </div>
+      <div class="text-start pt-4"><a href="clinical-expertise.html" class="btn btn-success" >Learn More</a> </div>
     </div>
     <!--Grid column-->
   </div>
@@ -138,7 +133,9 @@
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Subject Selection </h2>
       <div class="service pt-3"> 
-        <p>Full panel all the time! From healthy volunteer subjects, special populations such as pre or post menopausal women or patients we are here for you. Being located in the Greater Toronto Area, gives us access to a diverse population which is what Regulators look for in clinical trials. We draw from our active database which boasts over X volunteers in addition to reaching out by various advertising medians. We also have a very effective referral program - participants love the safe and comfortable environment offered at PMRI and spread the word. We are also enrolled in clinical RSVP which securely and confidentially validates subjects eligibility prior to enrollment by using biometrics. The goal is prevent dual enrollment which leads to increased accuracy of clinical study data and improves the participant’s safety.</p></div>
+        <p> <!-- <iframe src="Subjectselection.html" frameborder="0" height="100%" width="100%"></iframe> -->
+
+          Full panel all the time! From healthy volunteer subjects, special populations such as pre or post menopausal women or patients we are here for you. Being located in the Greater Toronto Area, gives us access to a diverse population which is what Regulators look for in clinical trials. We draw from our active database which boasts over X volunteers in addition to reaching out by various advertising medians. We also have a very effective referral program - participants love the safe and comfortable environment offered at  </p></div>
       </div>
       <!--Grid column-->
       <!--Grid column-->
@@ -155,8 +152,8 @@
     <!--Grid row-->
     <div class="row text-center mx-auto">
       <!--Grid column-->
-      <div class="col-md-4 mb-4">
-        <img class="img-fluid my-5" alt="100x100" src="img/Service/safety.png" data-holder-rendered="true">
+      <div class="col-md-4">
+        <img class="img-fluid my-5" alt="100x100" src="img/Service/safety.png">
       </div>
       <!--Grid column-->
       <!--Grid column-->
@@ -184,8 +181,8 @@
           </div>
           <!--Grid column-->
           <!--Grid column-->
-          <div class="col-md-4 mb-4">
-            <img class="img-fluid my-5" alt="100x100" src="img/Service/Pharmacy.png" data-holder-rendered="true">
+          <div class="col-md-4">
+            <img class="img-fluid my-5" alt="100x100" src="img/Service/Pharmacy.png">
           </div>
           <!--Grid column-->
         </div>
@@ -200,7 +197,7 @@
         <div class="row text-center mx-auto">
           <!--Grid column-->
           <div class="col-md-4 mb-4">
-            <img class="img-fluid my-5" alt="100x100" src="img/Service/kitchen.png" data-holder-rendered="true">
+            <img class="img-fluid my-5" alt="100x100" src="img/Service/kitchen.png">
           </div>
           <!--Grid column-->
           <!--Grid column-->
@@ -212,9 +209,7 @@
             <!--Grid column-->
           </div>
           <!--Grid row-->
-          
         </div>
-
 
         <!-- Newsletter --> 
 
@@ -226,12 +221,8 @@
         </div>
 
         <!-- Footer --> 
-
         <footer
         class="text-center text-lg-start text-green">
-
-        <!-- Section: Links -->
-        <section class="">
           <!--Grid row-->
           <div class="row">
             <!-- Grid column -->
@@ -316,8 +307,7 @@
                   </div>
                 </div>
                 <!--Grid row-->
-              </section>
-              <!-- Section: Links -->
+        
               <!-- Copyright -->
               <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
               </div>
