--- a/contactus.html
+++ b/contactus.html
@@ -27,8 +27,8 @@
   </head>
   <body>
     <!-- Nav bar -->
-      <!-- Nav bar -->
-  <nav class="navbar navbar-expand-lg bg-light fixed-top">
+  <div class="pb-5 mb-5">
+  <nav  class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
       <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,12 +84,11 @@
   </div>
 </nav>
 </div>
-</div>
-
 
 <!-- Banner -->
 
-<div class="page-header-contactus">
+<img src="img/ContactUs/banner.png" alt="Banner" class="img-fluid">
+<!-- <div class="page-header-contactus">
   <div class="overlay">
     <div class="container">
       <div class="row">
@@ -99,7 +98,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Cards --> 
 
@@ -194,9 +193,7 @@
     <div class="d-none" id="submitErrorMessage">
       <div class="text-center text-danger mb-3">Error sending message!</div>
     </div>
-
    
-
     <!-- Form submit button -->
     <div class="text-center">
       <button class="btn btn-success btn-lg border-square" type="submit">Send Message</button>
