--- a/readmore.html
+++ b/readmore.html
@@ -27,8 +27,8 @@
   </head>
   <body>
     <!-- Nav bar -->
-
-      <!-- Nav bar -->
+         
+ <div class="pb-5 mb-5">
   <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
@@ -84,6 +84,7 @@
     </div>
   </div>
 </nav>
+</div>
 </div>
 </div>
 
