--- a/scientificaffairs.html
+++ b/scientificaffairs.html
@@ -25,31 +25,32 @@
 </head>
 <body>
         <!-- Nav bar -->
-  <nav class="navbar navbar-expand-lg bg-light fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
-      <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <div class="pb-5 mb-5">
+          <nav class= "navbar navbar-expand-lg bg-light fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
+              <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
 
-          <li class="nav-item dropdown">
-           <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" > 
-            <!-- <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
-              Services 
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="clinical.html">Clinical Service</a></li>
-              <li><a class="dropdown-item" href="bioanalytical.html">Bioanalytical Services</a></li>
-              <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
-            </ul>
-          </li>
-          <!-- <li class="nav-item dropdown">
+                  <li class="nav-item dropdown">
+                   <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" > 
+                    <!-- <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
+                      Services 
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="clinical.html">Clinical Service</a></li>
+                      <li><a class="dropdown-item" href="bioanalytical.html">Bioanalytical Services</a></li>
+                      <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
+                    </ul>
+                  </li>
+            <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="scientificHub.html" id="navbarDropdown">Scientific Hub</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
              <li><a class="dropdown-item" href="researchhub.html">Research Hub</a></li>
@@ -61,7 +62,7 @@
           <a class="nav-link" href="PMRInews.html">PMRI News</a>
         </li>
 
-         <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="aboutus.html">About Us</a>
         </li>
 
@@ -81,26 +82,20 @@
   </div>
 </nav>
 </div>
-</div>
 
 <!-- Service Banner -->
+  
 
-<div class="page-header-service">
-  <div class="overlay">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>Scientific Affairs </h1>
-          <p>Science is our foundation and we never compromise on quality.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+   <img src="img/Service/scientificaffairsbanner.png" class = "img-fluid" alt="Banner" style="width: 100%;">
+
+  
 
 <div class="container">
-<h1 class="text-center pt-3 "> Scientific Affairs </h1>
+  <div class="col-md-12">
+<strong><h1 class="text-center pt-3 "> Scientific Affairs</h1></strong>
+<hr class="border-5">
 <p class="pt-3"> We recognize that science is the foundation upon which successful drug development is built. Our Scientific Affairs team plays a pivotal role in contributing to overseeing the integrity of the study process. With our expansive library of in-house data, our industry expertise and our experience working with global regulatory agencies, we develop study designs and project plans for regulatory markets around the world. We offer comprehensive support services to help navigate from pre-clinical to regulatory submission. </p>
+</div>
 </div>
 
 <!-- Biometrics --> 
@@ -120,7 +115,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. It goes without saying - reliable data is a key factor for the assessment and reporting of clinical trials. Count on us.
         </p>
       </div>
-      <div class="text-start pt-5"><a href="clinical-expertise.html" class="btn btn-success" >Learn More</a> </div>
+      <div class="text-start pt-4"><a href="clinical-expertise.html" class="btn btn-success" >Learn More</a> </div>
     </div>
     <!--Grid column-->
   </div>
@@ -176,105 +171,99 @@
 
         <!-- Footer --> 
 
-        <footer
-        class="text-center text-lg-start text-green">
+<footer class="text-center text-lg-start text-green">
+  <!--Grid row-->
+  <div class="row">
+    <!-- Grid column -->
+    <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+      <img src="img/logo.png">
+    </div>
 
-        <!-- Section: Links -->
-        <section class="">
-          <!--Grid row-->
-          <div class="row">
-            <!-- Grid column -->
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-              <img src="img/logo.png">
-            </div>
-
-            <!-- Grid column -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Services</h6>
-              <p>
-                <a class="text-black"href="clinical.html">Clinical Services</a>
-              </p>
-              <p>
-                <a class="text-black" href="bioanalytical.html">Bioanalytical Services</a>
-              </p>
-              <p>
-                <a class="text-black" href="scientificaffairs.html">Scientific Affairs</a>
-              </p>
-            </div>
+    <!-- Grid column -->
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+      <h6 class="text-uppercase mb-4 font-weight-bold">Services</h6>
+      <p>
+        <a class="text-black"href="clinical.html">Clinical Services</a>
+      </p>
+      <p>
+        <a class="text-black" href="bioanalytical.html">Bioanalytical Services</a>
+      </p>
+      <p>
+        <a class="text-black" href="scientificaffairs.html">Scientific Affairs</a>
+      </p>
+    </div>
 
 
-            <!-- Grid column -->
-            <hr class="w-100 clearfix d-md-none" /> 
+    <!-- Grid column -->
+    <hr class="w-100 clearfix d-md-none" /> 
 
-            <!-- Grid column -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Home</h6>
-              <p>
-                <a class="text-black" href="aboutus.html"> About Pharma Medica </a></p>
-                <p>
-                  <a class="text-black" href="#"> Terms & Condition</a></p>
-                  <p>
-                    <a class="text-black" href="contactus.html"> Contact Us</a></p>
-                  </div>
-                  <!-- Grid column -->
-                  <hr class="w-100 clearfix d-md-none" /> 
+    <!-- Grid column -->
+    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+      <h6 class="text-uppercase mb-4 font-weight-bold">Home</h6>
+      <p>
+        <a class="text-black" href="aboutus.html"> About Pharma Medica </a></p>
+        <p>
+          <a class="text-black" href="#"> Terms & Condition</a></p>
+          <p>
+            <a class="text-black" href="contactus.html"> Contact Us</a></p>
+          </div>
+          <!-- Grid column -->
+          <hr class="w-100 clearfix d-md-none" /> 
 
-                  <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Head Office</h6>
-                    <p>1600 Belgrave Rd</p>
-                    <p>Mississauga, ON</p>
-                    <p>L5R 0B7</p>
-                  </div>
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Head Office</h6>
+            <p>1600 Belgrave Rd</p>
+            <p>Mississauga, ON</p>
+            <p>L5R 0B7</p>
+          </div>
 
-                  <!-- Grid column -->
-                  <hr class="w-100 clearfix d-md-none" /> 
+          <!-- Grid column -->
+          <hr class="w-100 clearfix d-md-none" /> 
 
-                  <!-- Grid column -->
-                  <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Follow us Online</h6>
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Follow us Online</h6>
 
-                    <!-- Facebook -->
-                    <a
-                    class="btn btn-primary btn-floating m-1"
-                    style="background-color: #3b5998"
-                    href="#!"
-                    role="button"><i class="fa fa-facebook-f"></i></a>
+            <!-- Facebook -->
+            <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #3b5998"
+            href="#!"
+            role="button"><i class="fa fa-facebook-f"></i></a>
 
-                    <!-- Twitter -->
-                    <a
-                    class="btn btn-primary btn-floating m-1"
-                    style="background-color: #55acee"
-                    href="#!"
-                    role="button"><i class="fa fa-twitter"></i></a>
+            <!-- Twitter -->
+            <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #55acee"
+            href="#!"
+            role="button"><i class="fa fa-twitter"></i></a>
 
-                    <!-- Instagram -->
-                    <a
-                    class="btn btn-primary btn-floating m-1"
-                    style="background-color: #ac2bac"
-                    href="#!"
-                    role="button"
-                    ><i class="fa fa-instagram"></i></a>
+            <!-- Instagram -->
+            <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #ac2bac"
+            href="#!"
+            role="button"
+            ><i class="fa fa-instagram"></i></a>
 
-                    <!-- Linkedin -->
-                    <a
-                    class="btn btn-primary btn-floating m-1"
-                    style="background-color: #0082ca"
-                    href="#!"
-                    role="button"><i class="fa fa-linkedin-in"></i></a>
-                    
-                  </div>
-                </div>
-                <!--Grid row-->
-              </section>
-              <!-- Section: Links -->
-              <!-- Copyright -->
-              <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
-              </div>
-              <!-- Copyright -->
-            </footer>
-            <!-- Footer -->
+            <!-- Linkedin -->
+            <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #0082ca"
+            href="#!"
+            role="button"><i class="fa fa-linkedin-in"></i></a>
+            
+          </div>
+        </div>
+        <!--Grid row-->
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
 
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
