--- a/services.html
+++ b/services.html
@@ -22,8 +22,8 @@
   <link rel="manifest" href="img/favicon/site.webmanifest">
   </head>
   <body>
-    <!-- Nav bar -->
       <!-- Nav bar -->
+  <div class="pb-5 mb-5">
   <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
@@ -81,9 +81,10 @@
 </nav>
 </div>
 </div>
+</div>
 
 <!-- Service Banner -->
-
+<!-- <div class="pt-5">
 <div class="page-header-service">
   <div class="overlay">
     <div class="container">
@@ -96,8 +97,20 @@
     </div>
   </div>
 </div>
+</div>
+ -->
 
-<h1 class="text-center pt-3 "> Available Services in Pharma Medica</h1>
+<div class="row">
+<div class="container">
+</div>
+   <img src="img/Service/banner.png" class = "img-fluid" alt="Banner" style="width: 100%;">
+</div>
+ 
+<div class="container">
+  <div class="col-md-12 pt-3">
+<strong><h1 class="text-center pt-3 "> Available Services in Pharma Medica</h1></strong>
+<hr class="border-5">
+</div>
 
 <!-- services -->
 
@@ -116,7 +129,7 @@
       <h2 class="text-start"> Clinical Service</h2>
       <div class="service pt-3"> 
         <p>You can always count on PMRI when you need us. Our GCP-compliant custom built clinical unit, with over 115,000 square foot of space, provides sufficient capacity to meet all of your needs, even during the COVID period. Boasting 360 beds in 6 self-contained state-of-the art units Our flexible scheduling process also provides you with dosing dates right within your target range and accommodate delays and last minute requests. This is a key success factor that allows you to minimize the impact of unavoidable delays during the drug development process</p></div>
-        <div class="text-start pt-5"><a href="clinical.html" class="btn btn-success" >Learn More</a> </div>
+        <div class="text-start pt-4"><a href="clinical.html" class="btn btn-success" >Learn More</a> </div>
       </div>
     <!--Grid column-->
     </div>
@@ -134,7 +147,7 @@
         <h2 class="text-start"> Bioanalytical Service</h2>
       <div class="service pt-3"> 
         <p>At the center of what we do, our proprietary Laboratory Data Management System (LDMS), fully developed and validated in-house, captures data completely electronically from clinical sample processing to final reported results to eliminate human error. Our superior system which is FDA CFR Part 11 compliant operates with precision & sophistication, and it is compliant with the FDA CFR Part 11 with a full audit trail.</p></div>
-        <div class="text-start pt-5"><a href="bioanalytical.html" class="btn btn-success" >Learn More</a> </div>
+        <div class="text-start pt-4"><a href="bioanalytical.html" class="btn btn-success" >Learn More</a> </div>
       </div>
       <!--Grid column-->
       <!--Grid column-->
@@ -162,7 +175,7 @@
       <h2 class="text-start"> Scientific Affairs</h2>
       <div class="service pt-3"> 
         <p>We recognize that science is the foundation upon which successful drug development is built. Our Scientific Affairs team plays a pivotal role in contributing to overseeing the integrity of the study process. With our expansive library of in-house data, our industry expertise and our experience working with global regulatory agencies, we develop study designs and project plans for regulatory markets around the world. We offer comprehensive support services to help navigate from pre-clinical to regulatory submission.</p></div>
-        <div class="text-start pt-5"><a href="scientificaffairs.html" class="btn btn-success" >Learn More</a> </div>
+        <div class="text-start pt-4"><a href="scientificaffairs.html" class="btn btn-success" >Learn More</a> </div>
       </div>
     <!--Grid column-->
     </div>
@@ -240,7 +253,7 @@
 class="text-center text-lg-start text-green">
 
 <!-- Section: Links -->
-<section class="">
+
   <!--Grid row-->
   <div class="row">
     <!-- Grid column -->
@@ -325,8 +338,6 @@ class="text-center text-lg-start text-green">
           </div>
         </div>
         <!--Grid row-->
-      </section>
-      <!-- Section: Links -->
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
     </div>
