--- a/volunteer.html
+++ b/volunteer.html
@@ -21,7 +21,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
   <link rel="manifest" href="img/favicon/site.webmanifest">
-
 </head>
 <body>
 
@@ -39,7 +38,6 @@
             <a href="volunteer.html" class="btn btn-success" >Volunteers</a>
           </li>
         </ul>
-
       </div>
     </div>
   </nav>
@@ -48,23 +46,6 @@
 </div>
 
 <!-- Banner --> 
-<!-- <div class="container-fluid">
- <div class="page-header-volunteer">
-  <div class="overlay">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h1>Volunteers </h1>
-          <h5>What to Expect : Frequently Asked Questions</h5>
-          <a href="readmore.html">
-              <img src="img/volunteer/FAQ.png" class="img-fluid rounded-start" height="350px" width="350px"> 
-         </a>
-       </div>
-     </div>
-   </div>
- </div>
-</div> 
-</div> -->
 
 <div class=" row" >
   <div class ="col-md-4"> 
@@ -110,7 +91,7 @@
   <div class="row justify-content-center bg-green">
     <div class="col-md-6 px-5 text-center">      
       <div class="d-block mt-3"><h3 class="text-white">Do you want to participate in Clinical Trial?  </h3></div> 
-      <a class="btn btn-secondary m-3" href="readmore.html" >Discover</a>  
+      <a class="btn btn-secondary m-3" href="study.html" >Discover</a>  
     </div>
   </div>
 
@@ -160,10 +141,12 @@
 </div> -->
 
 <div class="justify-content-center bg-gray">
-  <div class="container py-3">
+  <div class="container py-5">
     <div class="row">
       <div class="col-md-12 text-center">
-        <div class="d-block m-3 pb-3"><h2><strong> HOW IT WORKS? </strong></h2></div></div>
+        <div class="d-block m-3 pb-3"><h2><strong> HOW IT WORKS? </strong></h2>
+        </div>
+      </div>
         <p>Clinical trials are in general medical or health related research studies that are conducted in human. These trials follow a defined protocol aimed to evaluate medical, surgical, or behavioral intervention to help find out if a new treatment is safe and effective and/or has less harmful side effects than the standard treatment.</p>
 
 
@@ -176,7 +159,6 @@
               </div>
             </div>
           </div>
-
         </div>
 
         <div class="col-md-3">
@@ -185,7 +167,6 @@
             <div class="animated-circle arrow"></div><img src="img/health.png" alt="Avatar" class="image"> 
             <div class="ciroverlay">
               <div class="text"> Take a Health Assesment
-
               </div>
             </div>
           </div>
@@ -196,7 +177,6 @@
             <div class="animated-circle arrow"></div><img src="img/participate.png" alt="Avatar" class="image">
             <div class="ciroverlay">
               <div class="text"> Participate
-
               </div>
             </div>
           </div>
@@ -207,20 +187,96 @@
             <img src="img/medicine.png" alt="Avatar" class="image">
             <div class="ciroverlay">
               <div class="text"> Help Advanced Medicine
-
               </div>
             </div>
           </div>
         </div>
-
       </div>
     </div>
-
   </div>
 
   <!-- Cards -->
+<div class="container">
+  <section>
+  <div class="container reveal">
+    <div class="row g-0">
+    <div class="col-md-9">
+    <h2>Who we are</h2>
+    <div class="text-container">
+        <p>
+         We are a Contract Research Organization (CRO) and work with clinical trial Sponsors from around the world.    We have been operating in Scarborough since 1997 and are established within our community.  Our focus is your health and safety, and our highly trained and qualified staff will be with you every step of the way.  Our state-of-the-art facility offers a comfortable environment with great amenities.  Check us out.
+        </p></div>
+      </div>
+    <div class="col-md-3 px-5">
+        <img src="img/volunteer/whoweare.png" class="rounded-start" alt="Card-1">
+      </div>
+    </div>    
+  </div>
+</div>
+</section>
+</div>
 
-  <div class="container p-5">
+<div class="container">
+<section>
+  <div class="container reveal">
+    <div class="row g-0">
+    <div class="col-md-3">
+      <img src="img/volunteer/referfriend.png" class="img-fluid rounded-start" alt="Card-1">
+  </div>
+    <div class="col-md-9">
+        <h2>Refer A Friend</h2>
+    <div class="text-container">
+        <p>
+         Our Refer-A-Friend program let's you earn money for every friend who completes a study. Spread the word and give it a try today.
+        </p>
+    </div>
+      </div>
+    </div>    
+  </div>
+</section>
+</div>
+
+<div class="container">
+  <section>
+  <div class="container reveal">
+    <div class="row g-0">
+    <div class="col-md-9">
+    <h2>Privacy</h2>
+    <div class="text-container">
+        <p>
+         We are a Contract Research Organization (CRO) and work with clinical trial Sponsors from around the world.    We have been operating in Scarborough since 1997 and are established within our community.  Our focus is your health and safety, and our highly trained and qualified staff will be with you every step of the way.  Our state-of-the-art facility offers a comfortable environment with great amenities.  Check us out.
+        </p></div>
+      </div>
+    <div class="col-md-3 px-5">
+        <img src="img/volunteer/privacy.png" class="rounded-start" alt="Card-1">
+      </div>
+    </div>    
+  </div>
+</div>
+</section>
+</div>
+
+<div class="container">
+<section>
+  <div class="container reveal">
+    <div class="row g-0">
+    <div class="col-md-3">
+      <img src="img/volunteer/apply.png" class="img-fluid rounded-start" alt="Card-1">
+  </div>
+    <div class="col-md-9 px-5">
+        <h2>How to apply</h2>
+    <div class="text-container">
+        <p>
+         Apply today at jobs@pharmamedica.com or Register on the Volunteer page.
+        </p>
+    </div>
+      </div>
+    </div>    
+  </div>
+</section>
+</div>
+
+<!--   <div class="container p-5">
     <div class="card text-center mx-auto" style="background-color: #E6D88A;">
       <div class="row g-0 pt-5">
         <div class="col-md-8">
@@ -245,11 +301,11 @@
      </div>
    </div>
  </div>
-</div>
+</div> -->
 
 <!-- Card -2 -->
 
-<div class="container px-5">
+<!-- <div class="container px-5">
   <div class="card text-center mx-auto" style="background-color: #E6D88A;">
     <div class="row g-0 pt-5">
       <div class="col-md-8">
@@ -274,10 +330,11 @@
    </div>
  </div>
 </div>
-</div>
+</div> -->
 
 <!-- Testimonials -->
-<div class="container">
+<div class="container card">
+
   <section class="testimonial-section p-5 align-items-center">
 
     <div class="row align-items-center">
@@ -290,6 +347,7 @@
         </div>
       </div>
       <div class="col-md-6">
+        <h2 class="card-title text-center"> Testimonials</h2>
         <div id="myCarousel" class="carousel slide" data-bs-interval="5000" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item testi-item active" data-color="#fb9c9a" data-img="img/1.png">
@@ -388,9 +446,7 @@
 
   <footer
   class="text-center text-lg-start text-green">
-
-  <!-- Section: Links -->
-  <section class="">
+  
     <!--Grid row-->
     <div class="row">
       <!-- Grid column -->
@@ -475,8 +531,7 @@
             </div>
           </div>
           <!--Grid row-->
-        </section>
-        <!-- Section: Links -->
+        
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
         </div>
@@ -497,8 +552,8 @@
       <input id="input" type="text" placeholder="Type Here !!" autocomplete="off" autofocus="true"> </i></input>
     </div>
   </div>
-</div>
- -->
+</div> -->
+ 
 
       <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
       <script type="text/javascript" src="js/bootstrap.min.js"></script>
