--- a/aboutus.html
+++ b/aboutus.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- Nav bar -->
-          <!-- Nav bar -->
+  <div class="pb-5 mb-5">
   <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
@@ -82,29 +82,21 @@
   </div>
 </nav>
 </div>
-</div>
+
 
 <!-- About Us Slider -->
 
-<div class="page-header-aboutus">
-  <div class="overlay">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>About Pharma Medica Research </h1>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
+<img src="img/AboutUs/banner.png" class = "img-fluid" alt="Banner" style="width: 100%;">
+
 
 <!-- Card who we are -->
-<div class="container">
-  <div class="card shadow m-5" style="max-width: 1920px;">
+<div class="container px-5 mx-auto">
+  <div class="card shadow m-5" style="max-width: 900px;">
     <div class="row g-0">
       <div class="col-md-6">
         <h1 class="card-title text-center m-3">Who We Are</h1>
-        <p class="card-text m-3">People make the difference and are operated by a passionate and involved leadership team. We truly believe that our success depends on the team of honest, hard working and passionate people who have substantial hands on experience developing processes and executing the procedures. Over the last 25+ years we've invested more into hiring the best scientists, clinicians and professionals, leading to an efficient organization with over 250 employees all striving to reach the common goal of providing a scientifically sound study with exceptional quality. Our experience coupled with the scientific nature of our highly trained and qualified employees gives us a strong position in the market place, allowing us to propel to the forefront of our industry while continuously innovating in our space. processes and executing the procedures. Over the last 25+ years we've invested more into hiring the best scientists, clinicians and professionals, leading to an efficient organization with over 250 employees all striving to reach the common goal of providing a scientifically sound study with exceptional quality. Our experience coupled with the scientific nature of our highly trained and qualified employees gives us a strong position in the market place, allowing us to propel to the forefront of our industry while continuously innovating in our space.</p>
+        <p class="card-text m-3">People make the difference and are operated by a passionate and involved leadership team. We truly believe that our success depends on the team of honest, hard working and passionate people who have substantial hands on experience developing processes and executing the procedures. Over the last 25+ years we've invested more into hiring the best scientists, clinicians and professionals, leading to an efficient organization with over 250 employees all striving to reach the common innovating in our space.</p>
         
       </div>
       <div class="col-md-6">
@@ -119,8 +111,8 @@
 <!-- Card Our Philosophy -->
 
 
-<div class="container">
-  <div class="card shadow m-5" style="max-width: 1920px;">
+<div class="container px-5 mx-auto">
+  <div class="card shadow m-5" style="max-width: 900px;">
     <div class="row g-0">
       <div class="col-md-6">
         <img src="img/AboutUs/Card-2.png" class="img-fluid rounded-start" alt="Card-1">
@@ -128,7 +120,7 @@
       <div class="col-md-6">
         <div class="card-body">
          <h1 class="card-title text-center m-3">Our Philosophy</h1>
-         <p class="card-text m-3">We recognize that science is the foundation upon which successful drug development is built. Our team of experts delivering the highest quality is our mission. "It is very easy to say that quality is at the core of our philosophy; however, it is an entirely different story to actually live up to this ideal. Deeply engrained into our culture it is the differentiating factor that helps PMRI reach client objectives and maintain the highest level of success. True customer focus. Communication is key! We will discuss your study needs in advance to set the expectations and allow us to not only to meet them but rather exceed them. It's easy...outsourcing simplified!</p>
+         <p class="card-text m-3">We recognize that science is the foundation upon which successful drug development is built. Our team of experts delivering the highest quality is our mission. "It is very easy to say that quality is at the core of our philosophy; however, it is an entirely different story to actually live up to this ideal. Deeply engrained into our culture it is the differentiating factor that helps PMRI reach client objectives and maintain the highest level of success. True customer focus. Communication is key! We will discuss your study needs in advance to set the expectations and allow us to not only to meet them but rather exceed them. </p>
        </div>
      </div>
    </div>
@@ -137,12 +129,12 @@
 
 <!-- Our Impact -->
 
-<div class="container">
-    <div class="card shadow m-5" style="max-width: 1920px;">
+<div class="container px-5 mx-auto">
+    <div class="card shadow m-5" style="max-width: 900px;">
     <div class="row g-0">
       <div class="col-md-6">
         <h1 class="card-title text-center m-3">Our Impact</h1>
-        <p class="card-text m-3">Together with our valued sponsors we play an integral role in getting new life saving drugs, drugs that are repurposed, biosimilars and affordable medicines to those in need. "We strive to reach the common goal of improving access to safer, effective medicines for countries around the world by conducting scientifically sound studies with exceptional quality. Having conducted over 5000 clinical trials every year we offer our clients the expertise of moving a drug from its conception to market approval. We pride ourselves on our proven quality, scientific integrity, flexibility, rapid turnaround and a unique customer-focused approach. <br><br> "As Schopenhauer once said "Health isn't everything, but without it everything else is nothing"</p>        
+        <p class="card-text m-3">Together with our valued sponsors we play an integral role in getting new life saving drugs, drugs that are repurposed, biosimilars and affordable medicines to those in need. "We strive to reach the common goal of improving access to safer, effective medicines for countries around the world by conducting scientifically sound studies with exceptional quality. Having conducted over 5000 clinical trials every year we offer our clients the expertise of moving a drug from its conception to market approval. We pride ourselves on our proven quality, scientific integrity, flexibility, rapid turnaround and a unique customer-focused approach. <br><br> </p>        
       </div>
       <div class="col-md-6">
         <div class="card-body">
@@ -211,8 +203,6 @@
       <div class="invalid-feedback" data-sb-feedback="name:required">Last Name is required.</div>
     </div>
 
-
-
     <!-- Email address input -->
     <div class="mb-3">
       <label class="form-label" for="emailAddress">Email Address</label>
@@ -261,7 +251,7 @@
 class="text-center text-lg-start text-green">
 
 <!-- Section: Links -->
-<section class="">
+
   <!--Grid row-->
   <div class="row">
     <!-- Grid column -->
@@ -346,16 +336,13 @@ class="text-center text-lg-start text-green">
           </div>
         </div>
         <!--Grid row-->
-      </section>
-      <!-- Section: Links -->
+ 
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
     </div>
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-
-
 
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
