--- a/bioanalytical.html
+++ b/bioanalytical.html
@@ -26,6 +26,7 @@
   <body>
     <!-- Nav bar -->
       <!-- Nav bar -->
+      <div class="pb-5 mb-5">
   <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
@@ -83,26 +84,23 @@
 </nav>
 </div>
 </div>
+</div>
 
 <!-- Service Banner -->
-
-<div class="page-header-service">
-  <div class="overlay">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>Bioanalytical Services </h1>
-          <p>Science is our foundation and we never compromise on quality.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="row">
+  <div class="container">
 </div>
+   <img src="img/Service/bioanalyticalbanner.png" class = "img-fluid" alt="Banner" style="width: 100%;">
+</div>
+
 
 <div class="container">
-<h1 class="text-center pt-3 "> Available Bioanalytical Services</h1>
+<strong><h1 class="text-center pt-3 ">Available Bioanalytical Services</h1></strong>
+<hr class="border-5">
 <p class="pt-3">At the center of what we do, our proprietary Laboratory Data Management System (LDMS), fully developed and validated in-house, captures data completely electronically from clinical sample processing to final reported results to eliminate human error. Our superior system which is FDA CFR Part 11 compliant operates with precision & sophistication, and it is compliant with the FDA CFR Part 11 with a full audit trail.</p>
 </div>
+
+ 
 
 <!-- MD/MVQbD -->
 
@@ -228,7 +226,7 @@
 class="text-center text-lg-start text-green">
 
 <!-- Section: Links -->
-<section class="">
+
   <!--Grid row-->
   <div class="row">
     <!-- Grid column -->
@@ -313,43 +311,12 @@ class="text-center text-lg-start text-green">
           </div>
         </div>
         <!--Grid row-->
-      </section>
-      <!-- Section: Links -->
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
     </div>
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-
-<!--   <div class="container">
-  	
-  	<div class="row text-center mx-auto">
-  		
-  		<div class="col-md-4 mb-4">
-  			<ul class="nav nav-tabs flex-column">
-  				<li class="nav-item">
-  					<a class="nav-link active" data-bs-toggle="tab" href="#home">Home</a>
-  				</li>
-  				<li class="nav-item">
-  					<a class="nav-link" data-bs-toggle="tab" href="#menu1">Menu 1</a>
-  				</li>
-  				<li class="nav-item">
-  					<a class="nav-link" data-bs-toggle="tab" href="#menu2">Menu 2</a>
-  				</li>
-  			</ul>
-  		</div>
-  		<div class="col-md-4 mb-4">
-  			
-  			<div class="tab-content">
-  				<div class="tab-pane container active" id="home">lorem Khushbu S hnjlkjflkd</div>
-  				<div class="tab-pane container fade" id="menu1"> ewrffd  dfdfsd  dfdsqasf </div>
-  				<div class="tab-pane container fade" id="menu2">...</div>
-  			</div>
-  		</div>
-  	</div>
-  </div>
- -->
 
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
