--- a/careers.html
+++ b/careers.html
@@ -24,8 +24,9 @@
 
   </head>
   <body>
-    <!-- Nav bar -->
-      <!-- Nav bar -->
+  <!-- Nav bar -->
+    
+  <div class="pb-5 mb-5">
   <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
@@ -82,10 +83,16 @@
   </div>
 </nav>
 </div>
-</div>
-<!--Banner -->
 
-<div class="page-header-career">
+
+<!--Banner -->
+  <div class="row">
+  <div class="container">
+</div>
+   <img src="img/career/banner.png" class = "img-fluid" alt="Banner" style="width: 100%;">
+</div>
+
+<!-- <div class="page-header-career">
   <div class="overlay">
     <div class="container">
       <div class="row">
@@ -96,7 +103,7 @@
     </div>
   </div>
 </div>
-
+ -->
 <!-- Body -->
 
 <div class="container p-5 mt-5">
@@ -235,8 +242,7 @@
 <footer
 class="text-center text-lg-start text-green">
 
-<!-- Section: Links -->
-<section class="">
+
   <!--Grid row-->
   <div class="row">
     <!-- Grid column -->
@@ -320,8 +326,7 @@ class="text-center text-lg-start text-green">
           </div>
         </div>
         <!--Grid row-->
-      </section>
-      <!-- Section: Links -->
+     
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
     </div>
