--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
 </div> -->
 
 <!-- Testimonials -->
-<div class="container">
+<div class="pt-5">
+<div class="container card">
   <section class="testimonial-section p-5 align-items-center">
 
     <div class="row align-items-center">
@@ -207,6 +208,7 @@
         </div>
       </div>
       <div class="col-md-6">
+        <h2 class="card-title text-center"> Testimonials</h2>
         <div id="myCarousel" class="carousel slide" data-bs-interval="5000" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item testi-item active" data-color="#fb9c9a" data-img="img/1.png">
@@ -231,8 +233,62 @@
         </div>
       </div>
     </div>
-  </div>
 </section>
+</div>
+</div>
+
+<!-- Company logo -->
+
+<div class="content d-flex align-items-center justify-content-center p-5">
+    <div class="spin rounded">      
+        <div class="h3 text-center pt-2">Trusted By Many</div>
+        <div class="fs-5 text-center pb-3 mb-3">Here are some of the regulatory audits, accreditations and certifications we have received over the years</div>
+
+      <div class="rollers position-relative overflow-hidden">
+            <div class="start-roller"></div>
+            <div class="wrapper">
+                <div class="items-container roll-LL">
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"></div>
+                </div>
+                <div class="items-container roll-RL">
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                </div>
+            </div>
+
+            <div class="wrapper">
+                <div class="items-container reverse-roll-LL">
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                </div>
+                <div class="items-container reverse-roll-RL">
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                </div>
+
+              </div>
+            <div class="end-roller"></div>
+        </div>
+    </div>
+</div>  
+
 
 <!-- Ask a Question -->
 <h1 class="text-center pt-5"> Send Us A Message </h1> 
@@ -285,61 +341,7 @@
   </form>
 </div>
 
-
-<!-- Company logo -->
-
-<div class="content d-flex align-items-center justify-content-center pb-3">
-    <div class="spin rounded">      
-        <div class="h3 text-center pt-2">Trusted By Many</div>
-        <div class="fs-5 text-center pb-3 mb-3">Here are some of the regulatory audits, accreditations and certifications we have received over the years</div>
-
-      <div class="rollers position-relative overflow-hidden">
-            <div class="start-roller"></div>
-            <div class="wrapper">
-                <div class="items-container roll-LL">
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"></div>
-                </div>
-                <div class="items-container roll-RL">
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                </div>
-            </div>
-
-            <div class="wrapper">
-                <div class="items-container reverse-roll-LL">
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                </div>
-                <div class="items-container reverse-roll-RL">
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
-                </div>
-
-              </div>
-            <div class="end-roller"></div>
-        </div>
-    </div>
-</div>  
-
 <!-- Chat pop-up -->
-
 
 <!-- Newsletter --> 
 
@@ -356,7 +358,7 @@
 class="text-center text-lg-start text-green">
 
 <!-- Section: Links -->
-<section class="">
+
   <!--Grid row-->
   <div class="row">
     <!-- Grid column -->
@@ -440,9 +442,8 @@ class="text-center text-lg-start text-green">
             
           </div>
         </div>
+
         <!--Grid row-->
-      </section>
-      <!-- Section: Links -->
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
     </div>
